--- a/index.css
+++ b/index.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css2?family=Big+Shoulders+Display:wght@700&family=Red+Hat+Display:ital,wght@0,900;1,500;1,900&display=swap");
+
 :root {
   --Dark_blue: hsl(223, 47%, 23%); /* button */
   --Pale_blue: hsl(225, 100%, 94%);
@@ -5,13 +7,126 @@
   --Very_pale_blue: hsl(225, 100%, 98%);
   --Desaturated_blue: hsl(224, 23%, 55%);
 }
-
-body {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  background-color: var(--Pale_blue);
+*,
+*::after,
+*::before {
+  margin: 0;
+  padding: 0;
+  box-sizing: inherit;
 }
-.main-info {
+body {
+  font-size: 16px;
+  box-sizing: border-box;
+  background-color: var(--Pale_blue);
+  text-align: center;
+}
+main {
+  width: clamp(375px, 51.8%, 1440px);
+  margin: 0;
+  padding: 0;
+  position: absolute;
+  left: 200px;
+  top: 100px;
+}
+.wrapper_image {
+  background-image: url(/images/pattern-background-desktop.svg);
+}
+img {
+  border-radius: 20px 20px 0px 0px;
+}
+.summary_card {
+  border-radius: 2rem;
   background-color: var(--Very_pale_blue);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  position: absolute;
+}
+h1,
+h2,
+.btn_1 {
+  font-family: "Big Shoulders Display", cursive;
+  font-family: "Red Hat Display", sans-serif;
+}
+h1 {
+  color: var(--Dark_blue);
+  padding-block-start: 2.4rem;
+}
+p {
+  color: var(--Pale_blue);
+  color: black;
+  opacity: 1;
+  margin: 1.4rem;
+}
+
+.order_container {
+  display: flex;
+  border-radius: 10px;
+  background-color: var(--Dark_blue);
+  padding-inline-start: 2.4rem;
+  padding-inline-end: 2.4rem;
+  justify-content: space-between;
+  margin-block-start: 2rem;
+  margin-block-end: 3.2rem;
+  padding: 2.5rem 2.4rem;
+}
+.music_icon {
+  width: 40.8px;
+  height: 40.8px;
+}
+h2 {
+  font-size: 16px;
+  position: relative;
+}
+.plan_info {
+  padding: 0;
+  margin-block-start: 0.6rem;
+  position: relative;
+  left: 0px;
+  top: 5px;
+}
+.change_order {
+  color: var(--Dark_blue);
+  text-decoration: underline;
+  border: 0;
+  align-self: center;
+}
+.btn_1 {
+  display: block;
+  width: 90%;
+  height: 40px;
+  padding-top: 1rem;
+  padding-bottom: 1rem;
+  border: 0px;
+  border-radius: 10px;
+  background-color: var(--Bright_blue);
+}
+.btn_1 :hover {
+  cursor: pointer;
+}
+.cancel_order {
+  margin: 20px;
+  padding: 20px;
+  border: 0;
+  text-decoration: none;
+  border-radius: 20px;
+  color: var(--Bright_blue);
+}
+.cancel_order:hover {
+  color: var(--Dark_blue);
+}
+footer {
+  margin: 700px;
+  padding: 50px;
+  position: absolute;
+  left: 10px;
+  top: 50px;
+}
+
+@media screen and (max-width: 375px) {
+  body {
+    background-image: url(/images/pattern-background-mobile.svg);
+    font-size: 10px;
+  }
 }
