--- a/index.css
+++ b/index.css
@@ -1,6 +1,6 @@
-@import url("https://fonts.googleapis.com/css2?family=Red+Hat+Display:ital,wght@0,900;1,500;1,900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Red+Hat+Display:wght@500,700;900&display=swap");
 :root {
-  --Dark_blue: hsl(223, 47%, 23%); /* button */
+  --Dark_blue: hsl(223, 47%, 23%); /* button_hover, title */
   --Pale_blue: hsl(225, 100%, 94%);
   --Bright_blue: hsl(245, 75%, 52%);
   --Very_pale_blue: hsl(225, 100%, 98%);
@@ -14,10 +14,14 @@
   box-sizing: inherit;
 }
 body {
+  margin: 0;
   font-size: 16px;
   box-sizing: border-box;
   background-color: var(--Pale_blue);
   text-align: center;
+  background-image: url(/images/pattern-background-desktop.svg);
+  background-repeat: no-repeat;
+  font-family: "Red Hat Display", sans-serif;
 }
 main {
   width: clamp(375px, 51.8%, 1440px);
@@ -27,65 +31,65 @@ main {
   left: 200px;
   top: 100px;
 }
-.wrapper_image {
-  background-image: url(/images/pattern-background-desktop.svg);
-}
+
 img {
+  max-width: 100%;
   border-radius: 20px 20px 0px 0px;
+  border-color: var(--Desaturated_blue);
 }
 .summary_card {
-  border-radius: 2rem;
+  border-radius: 1rem;
   background-color: var(--Very_pale_blue);
+  width: 85%;
+  margin: 0 auto;
   display: flex;
-  align-items: center;
-  justify-content: center;
   flex-direction: column;
-  position: absolute;
+  margin-bottom: 40px;
+  box-shadow: 0px 40px 40px -20px rgba(13, 48, 189, 0.151826);
 }
-h1,
 h2,
-button {
-  font-family: "Red Hat Display", sans-serif;
+.btn_1,
+.plan_title {
+  font-size: 1rem;
 }
 h1 {
   color: var(--Dark_blue);
-  padding-block-start: 2.4rem;
+  padding-block-start: 1rem;
 }
 p {
   color: var(--Pale_blue);
   color: black;
   opacity: 0.6;
-  margin: 1.4rem;
+  margin: 1rem;
 }
 
 .order_container {
   display: flex;
-  width: 20rem;
-  height: 5rem;
+  align-items: center;
+  padding: 1rem;
   border-radius: 10px;
-  background-color: var(--Desaturated_blue);
   margin: 1rem;
-  padding: 1.4rem;
+  background-color: var(--Pale_blue);
 }
+
 .music_icon {
   width: 40.8px;
   height: 40.8px;
-}
-h2 {
-  font-size: 16px;
-  position: relative;
-}
-.plan_info {
-  padding: 0;
-  margin-block-start: 0.6rem;
   position: relative;
   left: 0px;
-  top: 5px;
+}
+
+.plan_info {
+}
+.plan_title {
+  font-weight: 600;
 }
 .change_order {
   color: var(--Bright_blue);
+  background-color: var(--pale_blue);
   text-decoration: underline;
   align-self: center;
+  font-size: 1rem;
 }
 .change_order :hover {
   color: var(--Dark_blue);
@@ -96,33 +100,48 @@ button {
   height: 40px;
   border: 0px;
   border-radius: 10px;
+  cursor: pointer;
 }
 
 .btn_1 {
   background-color: var(--Bright_blue);
   color: white;
   box-shadow: 0px 20px 20px rgba(56, 24, 225, 0.1209291);
+  margin-left: 1rem;
+}
+.btn_1 :hover {
+  background-color: #766cf1;
 }
 .cancel_order {
-  margin: 20px;
+  margin: 0.4rem;
   border: 0;
   border-radius: 20px;
   color: var(--Bright_blue);
+  background-color: var(--Very_pale_blue);
 }
 .cancel_order:hover {
   color: var(--Dark_blue);
 }
 footer {
-  margin: 700px;
+  margin: 5rem;
+  position: relative;
+  top: 600px;
+  right: 50px;
   padding: 50px;
-  position: absolute;
-  left: 10px;
-  top: 50px;
 }
 
 @media screen and (max-width: 375px) {
   body {
     background-image: url(/images/pattern-background-mobile.svg);
     font-size: 10px;
+  }
+  .btn {
+    margin-bottom: 2rem;
+  }
+}
+
+@media (min-width: 800px) {
+  body {
+    padding: 90px 0;
   }
 }
