--- a/index.css
+++ b/index.css
@@ -15,6 +15,7 @@
 }
 body {
   margin: 0;
+  padding: 0;
   font-size: 16px;
   box-sizing: border-box;
   background-color: var(--Pale_blue);
@@ -24,12 +25,11 @@ body {
   font-family: "Red Hat Display", sans-serif;
 }
 main {
-  width: clamp(375px, 51.8%, 1440px);
-  margin: 0;
-  padding: 0;
-  position: absolute;
-  left: 200px;
-  top: 100px;
+  width: clamp(375px, 40%, 1440px);
+  margin: 0 auto;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 img {
@@ -39,7 +39,7 @@ img {
 }
 .summary_card {
   border-radius: 1rem;
-  background-color: var(--Very_pale_blue);
+  background-color: white;
   width: 85%;
   margin: 0 auto;
   display: flex;
@@ -47,7 +47,6 @@ img {
   margin-bottom: 40px;
   box-shadow: 0px 40px 40px -20px rgba(13, 48, 189, 0.151826);
 }
-h2,
 .btn_1,
 .plan_title {
   font-size: 1rem;
@@ -55,42 +54,53 @@ h2,
 h1 {
   color: var(--Dark_blue);
   padding-block-start: 1rem;
+  font-weight: 700;
 }
 p {
   color: var(--Pale_blue);
   color: black;
   opacity: 0.6;
+}
+.card_info {
   margin: 1rem;
 }
 
 .order_container {
+  background-color: var(--Very_pale_blue);
   display: flex;
   align-items: center;
-  padding: 1rem;
+  padding: 0.5rem;
+  justify-content: space-between;
   border-radius: 10px;
   margin: 1rem;
-  background-color: var(--Pale_blue);
 }
 
 .music_icon {
-  width: 40.8px;
-  height: 40.8px;
-  position: relative;
-  left: 0px;
+  display: flex;
+  width: 20%;
 }
-
+.plan_info {
+  display: flex;
+  flex-direction: column;
+  position: relative;
+  top: 5px;
+  left: 10px;
+}
 .plan_title {
   font-weight: 600;
+  margin-bottom: 3px;
 }
+
 .change_order {
   color: var(--Bright_blue);
   background-color: var(--pale_blue);
   text-decoration: underline;
   align-self: center;
   font-size: 1rem;
+  font-weight: 500;
 }
-.change_order :hover {
-  color: var(--Dark_blue);
+.change_order:hover {
+  opacity: 0.85;
 }
 button {
   display: block;
@@ -105,41 +115,46 @@ button {
   background-color: var(--Bright_blue);
   color: white;
   box-shadow: 0px 20px 20px rgba(56, 24, 225, 0.1209291);
+  margin-top: 1rem;
   margin-left: 1rem;
 }
-.btn_1 :hover {
-  background-color: #766cf1;
+.btn_1:hover {
+  background-color: var(--Desaturated_blue);
 }
 .cancel_order {
-  margin: 0.4rem;
   border: 0;
   border-radius: 20px;
   color: var(--Bright_blue);
-  background-color: var(--Very_pale_blue);
+  background-color: transparent;
+  margin-bottom: 2rem;
+  opacity: 0.9;
 }
 .cancel_order:hover {
   color: var(--Dark_blue);
+  opacity: 1;
+  font-weight: bold;
 }
 footer {
-  margin: 5rem;
-  position: relative;
-  top: 600px;
-  right: 50px;
+  margin: 3rem;
   padding: 50px;
 }
 
-@media screen and (max-width: 375px) {
+@media screen and (min-width: 375px) {
   body {
     background-image: url(/images/pattern-background-mobile.svg);
     font-size: 10px;
+  }
+  .order_container {
+    padding: 0.5rem;
+    margin: 0.5rem;
   }
   .btn {
     margin-bottom: 2rem;
   }
 }
-
-@media (min-width: 800px) {
-  body {
-    padding: 90px 0;
+@media screen and (min-width: 1400px) {
+  order_container {
+    padding: 0.2rem;
+    margin: 0.5;
   }
 }
