--- a/index.css
+++ b/index.css
@@ -78,7 +78,7 @@ p {
 .music_icon {
   display: flex;
   width: 20%;
-  height: 20px;
+  height: 50px;
 }
 .plan_info {
   display: flex;
@@ -138,6 +138,11 @@ button {
 footer {
   margin: 3rem;
   padding: 50px;
+}
+
+footer img {
+  width: 20px;
+  height: 20px;
 }
 
 @media screen and (min-width: 375px) {
