--- a/index.css
+++ b/index.css
@@ -23,8 +23,9 @@ body {
   background-image: url(/images/pattern-background-desktop.svg);
   background-repeat: no-repeat;
   font-family: "Red Hat Display", sans-serif;
-  position: relative;
-  top: 80px;
+  display:flex;
+  flex-direction:column;
+  align-items:center;
 }
 main {
   width: clamp(375px, 40%, 1440px);
