--- a/index.css
+++ b/index.css
@@ -17,7 +17,7 @@ body {
   padding: 0;
   font-size: 16px;
   background-color: var(--Pale_blue);
-  background: url(/images/pattern-background-mobile.svg) no-repeat;
+  background: url(./images/pattern-background-mobile.svg) no-repeat;
   font-family: "Red Hat Display", sans-serif;
 }
 
@@ -26,7 +26,7 @@ img {
 }
 
 .card {
-  background: url(/images/pattern-background-mobile.svg) no-repeat;
+  background: url(./images/pattern-background-mobile.svg) no-repeat;
   border-radius: 1rem;
   padding:2rem;
 }
@@ -156,12 +156,12 @@ button + button {
 
 @media screen and (min-width: 375px) {
   body {
-    background-image: url(/images/pattern-background-desktop.svg);
+    background: url(./images/pattern-background-desktop.svg) no-repeat;
     font-size: 10px;
   }
 
   .card {
-    background: url(/images/pattern-background-desktop.svg) no-repeat;
+    background: url(./images/pattern-background-desktop.svg) no-repeat;
   }
   
   .order-container {
